add content to product container

--- a/website.html
+++ b/website.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li>
-                <a href="#"><img src="bilder/logo.jpeg" alt="Logo von ASTRO LIVING"></a>
+                <a href="#"><img src="bilder/logo.jpeg" alt="Logo von ASTRO LIVING"/></a>
             </li>
             <li>
                 <a href="#"><span>About</span></a>
@@ -44,27 +44,43 @@
     <h1>ASTRO LIVING</h1>
     <h2>- Out of This World Comfort -</h2>
     <div class="container">
-        <img src="bilder/logo.jpeg" alt="Firmenlogo ASTRO LIVING">
+        <img src="bilder/logo.jpeg" alt="Firmenlogo ASTRO LIVING"/>
         <div class="container-description">
             <h1>ASTRO LIVING Inc.</h1>
-            <p>ASTRO LIVING Inc. ist die größte und ...</p>
+            <span class="material-symbols-rounded">rocket_launch</span>
+            <p>Über uns:<br/>
+                ASTRO LIVING Inc. ist der führende Anbieter von innovativen Komfortlösungen, die speziell für den
+                Weltraum entwickelt wurden.
+                Seit unserer Gründung im Jahr 2045 widmen wir uns der Mission, das Leben jenseits der Erde so angenehm
+                und luxuriös wie möglich
+                zu gestalten. Unsere Produkte sind nicht nur technologisch wegweisend, sondern auch auf die
+                einzigartigen Herausforderungen der Schwerelosigkeit und extraterrestrischen Lebensräume abgestimmt.
+            </p>
+            <span class="material-symbols-rounded">apartment</span>
+            <p>Unsere Mission:<br/>
+                Wir wollen die erste Adresse für intergalaktische Komforttechnologie sein. Ob auf Raumstationen,
+                Mars-Kolonien oder bei interstellaren Reisen – wir bringen Wärme, Bequemlichkeit und Stil in den Kosmos.
+            </p>
+            <a href="#">Mehr erfahren</a>
         </div>
     </div>
     <div class="parallax-window parallax-window-1"></div>
     <div class="container">
-        <img src="bilder/pod.jpg" alt="Produktbild Quantum Sleep Pod">
-        <p>Quantum Sleep Pod</p>
-        <p>Beschriebung</p>
-        <a href="#">Zum Produkt</a>
+        <img src="bilder/pod.jpg" alt="Produktbild Quantum Sleep Pod"/>
+        <div class="container-description">
+            <h1>Quantum Sleep Pod</h1>
+            <p>Der Quantum Sleep Pod ist ein hochmodernes Schlafsystem, das speziell für die Schwerelosigkeit entwickelt wurde. Durch schalldichte Materialien und adaptive Temperaturregulierung schafft er eine ideale Schlafumgebung. Eingebaute Vibrationssensoren und ein KI-gesteuertes Schlafüberwachungssystem fördern Tiefschlafphasen und bieten maximale Erholung, selbst in der Weite des Alls.</p>
+            <a href="#">Zum Produkt</a>
+        </div>
     </div>
     <div class="parallax-window parallax-window-2"></div>
     <div class="container">
+        <img src="bilder/room.jpg" alt="Produktbild Raum"/>
         <p>Raum</p>
-        <img src="bilder/room.jpg" alt="Produktbild Raum">
     </div>
     <div class="parallax-window parallax-window-3"></div>
     <div class="container">
-        <img src="bilder/station.jpg" alt="Station">
+        <img src="bilder/station.jpg" alt="Station"/>
         <p>Station</p>
     </div>
     <div class="parallax-window parallax-window-4"></div>
