Refactor image paths and update styles.
Renamed image paths from "bilder" to "pictures" for consistency and deleted unused files. Refined CSS variables for container elements and cleaned up comments for better readability. Added project description and browser compatibility notes to README.md.

--- a/website.html
+++ b/website.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>ASTRO LIVING</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-          rel="stylesheet">
+          rel="stylesheet"/>
 </head>
 <body>
 <header>
     <nav>
         <ul>
             <li>
-                <a href="#"><img src="bilder/logo.jpeg" alt="Logo von ASTRO LIVING"/></a>
+                <a href="#"><img src="pictures/products/logo.jpeg" alt="Logo von ASTRO LIVING"></a>
             </li>
             <li>
                 <a href="#"><span>About</span></a>
@@ -44,7 +44,7 @@
     <h1>ASTRO LIVING</h1>
     <h2>- Out of This World Comfort -</h2>
     <div class="container">
-        <img src="bilder/logo.jpeg" alt="Firmenlogo ASTRO LIVING"/>
+        <img src="pictures/products/logo.jpeg" alt="Firmenlogo ASTRO LIVING"/>
         <div class="container-description">
             <h1>ASTRO LIVING Inc.</h1>
             <span class="material-symbols-rounded">rocket_launch</span>
@@ -66,24 +66,55 @@
     </div>
     <div class="parallax-window parallax-window-1"></div>
     <div class="container">
-        <img src="bilder/pod.jpg" alt="Produktbild Quantum Sleep Pod"/>
+        <img src="pictures/products/pod.webp" alt="Produktbild Quantum Sleep Pod"/>
         <div class="container-description">
             <h1>Quantum Sleep Pod</h1>
-            <p>Der Quantum Sleep Pod ist ein hochmodernes Schlafsystem, das speziell für die Schwerelosigkeit entwickelt wurde. Durch schalldichte Materialien und adaptive Temperaturregulierung schafft er eine ideale Schlafumgebung. Eingebaute Vibrationssensoren und ein KI-gesteuertes Schlafüberwachungssystem fördern Tiefschlafphasen und bieten maximale Erholung, selbst in der Weite des Alls.</p>
+            <p>Der Quantum Sleep Pod ist ein hochmodernes Schlafsystem, das speziell für die Schwerelosigkeit entwickelt
+                wurde. Durch schalldichte Materialien und adaptive Temperaturregulierung schafft er eine ideale
+                Schlafumgebung. Eingebaute Vibrationssensoren und ein KI-gesteuertes Schlafüberwachungssystem fördern
+                Tiefschlafphasen und bieten maximale Erholung, selbst in der Weite des Alls.</p>
             <a href="#">Zum Produkt</a>
         </div>
     </div>
     <div class="parallax-window parallax-window-2"></div>
     <div class="container">
-        <img src="bilder/room.jpg" alt="Produktbild Raum"/>
-        <p>Raum</p>
+        <img src="pictures/products/gardenSystem.jpg" alt="Produktbild Quantum Sleep Pod"/>
+        <div class="container-description">
+            <h1>Lunar Garden System</h1>
+            <p>Das Lunar Garden System ist ein fortschrittliches Pflanzensystem für Weltraumumgebungen, das es
+                ermöglicht, frische Pflanzen in Schwerelosigkeit zu kultivieren. Mit einer transparenten, modularen
+                Struktur und leuchtenden Akzenten in Blau und Violett unterstützt es optimales Wachstum und schafft eine
+                beruhigende Atmosphäre. Der Garten integriert modernste Technologien, um Pflanzenpflege in der Weite des
+                Alls effizient und nachhaltig zu gestalten.</p>
+            <a href="#">Zum Produkt</a>
+        </div>
     </div>
     <div class="parallax-window parallax-window-3"></div>
     <div class="container">
-        <img src="bilder/station.jpg" alt="Station"/>
-        <p>Station</p>
+        <img src="pictures/products/shower.jpg" alt="Produktbild Quantum Sleep Pod"/>
+        <div class="container-description">
+            <h1>Stellar Shower</h1>
+            <p>Die Stellar Shower ist eine innovative Weltraumdusche, die ein luxuriöses Reinigungserlebnis in
+                Schwerelosigkeit bietet. Mit einem geschlossenen Kreislaufsystem und nanotechnologischen Reinigungsdüsen
+                wird Wasser effizient genutzt und recycelt. In sanften Blau- und Violetttönen beleuchtet, simuliert die
+                Dusche das Gefühl von fließendem Wasser, während sie gleichzeitig die Schwerelosigkeit nutzt, um ein
+                einzigartiges Wellness-Erlebnis zu schaffen.</p>
+            <a href="#">Zum Produkt</a>
+        </div>
     </div>
     <div class="parallax-window parallax-window-4"></div>
+    <div class="container">
+        <img src="pictures/products/massageChair.jpg" alt="Produktbild Quantum Sleep Pod"/>
+        <div class="container-description">
+            <h1>Zero-G Massage Chair</h1>
+            <p>Der Zero-G Massage Chair ist ein revolutionärer Massagestuhl, der speziell für die Schwerelosigkeit
+                entwickelt wurde. Er kombiniert präzise Massagewalzen mit adaptivem Luftdruck, um Verspannungen zu lösen
+                und die Durchblutung zu fördern. Das ergonomische Design passt sich dem Körper perfekt an und sorgt in
+                der Schwerelosigkeit für ein unvergleichliches Entspannungserlebnis. Beleuchtet in beruhigenden Blau-
+                und Violetttönen, schafft der Stuhl eine Oase des Wohlbefindens im Kosmos.</p>
+            <a href="#">Zum Produkt</a>
+        </div>
+    </div>
 </main>
 <footer class="footer">
     <div class="footer-container">
