Update product list in the website footer

--- a/website.html
+++ b/website.html
@@ -122,10 +122,9 @@
             <h3>Produkte</h3>
             <ul>
                 <li><a href="#">Quantum Sleep Pod</a></li>
-                <li><a href="#">DreamSphere Nexus</a></li>
-                <li><a href="#">Cosmic Aroma Diffuser</a></li>
-                <li><a href="#">EonFood Generator</a></li>
-                <li><a href="#">SolarBreeze</a></li>
+                <li><a href="#">Lunar Garden System</a></li>
+                <li><a href="#">Stellar Shower</a></li>
+                <li><a href="#">Zero-G Massage Chair</a></li>
             </ul>
         </div>
         <div class="footer-column">
